# sorting-algorithms-comparison

./: Array.h  CMakeLists.txt  DataGeneration.h  FileLoader.h  FileOperations.h  FunctionalArray.h  Timer.h  main.cpp
sortArray/: main.cpp
sortArray/Array/: Array.h
sortArray/Data/: DataGeneration.h  FileOperations.h
sortArray/Timer/: Timer.cpp
sortArray/array/: Array.h  FunctionalArray.h
sortArray/boardGames/: BoardGame.cpp  BoardGame.h
sortArray/data/: DataGeneration.h  FileOperations.h
sortArray/help/: Help.cpp  Help.h
